# LittleEngineVk

./: .gitignore  CMakeLists.txt
cmake/: platform.cmake
data/shaders/: basic.vert
demo/: main.cpp
ext/vulkan_hpp/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/core/: log.hpp  os.hpp  utils.hpp
libs/core/src/: log.cpp  os.cpp
libs/core/src/io/: path.cpp  reader.cpp
libs/graphics/: CMakeLists.txt
libs/graphics/include/graphics/: descriptor_set.hpp  mesh.hpp  pipeline.hpp  render_context.hpp  shader_buffer.hpp  texture.hpp  types.hpp
libs/graphics/include/graphics/context/: bootstrap.hpp  command_buffer.hpp  device.hpp  instance.hpp  memory.hpp  memory_types.hpp  physical_device.hpp  queue_multiplex.hpp  queues.hpp  swapchain.hpp  transfer.hpp  vram.hpp
libs/graphics/include/graphics/utils/: utils.hpp
libs/graphics/src/: descriptor_set.cpp  mesh.cpp  pipeline.cpp  render_context.cpp  shader.cpp  texture.cpp
libs/graphics/src/context/: bootstrap.cpp  command_buffer.cpp  device.cpp  frame_sync.cpp  instance.cpp  memory.cpp  physical_device.cpp  queue_multiplex.cpp  queues.cpp  swapchain.cpp  transfer.cpp  vram.cpp
libs/graphics/src/utils/: utils.cpp
libs/window/: CMakeLists.txt
libs/window/include/window/: instance.hpp
libs/window/src/: desktop_instance.cpp
src/gfx/: device.cpp
